--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,15 @@
 name: Node.js Package
 
 on:
+  workflow_dispatch:
+    inputs:
+      example_input:
+        description: 'An example input'
+        required: false
+        default: 'default_value'
   release:
     types: [created]
+  
 
 jobs:
   publish-npm:
@@ -14,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14.20.1
           registry-url: https://registry.npmjs.org/
           
       - name: Set Global Git Config
