--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "input-with-suggestions-lib",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/PunteriaCero/input-with-suggestions"
