--- a/angular.json
+++ b/angular.json
@@ -3,33 +3,33 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "input-suggestions": {
-      "root": "projects/input-suggestions",
-      "sourceRoot": "projects/input-suggestions/src",
+    "input-with-suggestions-lib": {
+      "root": "projects/input-with-suggestions-lib",
+      "sourceRoot": "projects/input-with-suggestions-lib/src",
       "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "tsConfig": "projects/input-suggestions/tsconfig.lib.json",
-            "project": "projects/input-suggestions/ng-package.json"
+            "tsConfig": "projects/input-with-suggestions-lib/tsconfig.lib.json",
+            "project": "projects/input-with-suggestions-lib/ng-package.json"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/input-suggestions/src/test.ts",
-            "tsConfig": "projects/input-suggestions/tsconfig.spec.json",
-            "karmaConfig": "projects/input-suggestions/karma.conf.js"
+            "main": "projects/input-with-suggestions-lib/src/test.ts",
+            "tsConfig": "projects/input-with-suggestions-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/input-with-suggestions-lib/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/input-suggestions/tsconfig.lib.json",
-              "projects/input-suggestions/tsconfig.spec.json"
+              "projects/input-with-suggestions-lib/tsconfig.lib.json",
+              "projects/input-with-suggestions-lib/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -167,5 +167,5 @@
       }
     }
   },
-  "defaultProject": "input-suggestions"
+  "defaultProject": "input-with-suggestions-lib"
 }
