--- a/projects/input-with-suggestions-lib/package.json
+++ b/projects/input-with-suggestions-lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "input-suggestions",
-  "version": "0.0.1",
+  "name": "input-with-suggestions",
+  "version": "0.0.4",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0",
