--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,8 +4,15 @@
 name: Node.js Package
 
 on:
+  workflow_dispatch:
+    inputs:
+      example_input:
+        description: 'An example input'
+        required: false
+        default: 'default_value'
   release:
     types: [created]
+  
 
 jobs:
   publish-npm:
@@ -14,16 +21,14 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14.20.1
           registry-url: https://registry.npmjs.org/
-
+          
       - name: Set Global Git Config
         run: |
           git config --global user.email "mcodesido@baufest.com"
           git config --global user.name "Mateo Codesido"
-
-      - name: Bump Version
-        run: npm version ${{ github.event.release.tag_name }}
+          
 
       - name: Install Dependencies
         run: npm ci
@@ -34,4 +39,4 @@ jobs:
       - name: Publish Package
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
