--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,7 +29,9 @@ jobs:
           git config --global user.email "mcodesido@baufest.com"
           git config --global user.name "Mateo Codesido"
           
-
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli@15.2.0
+        
       - name: Install Dependencies
         run: npm ci
 
