--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build input-with-suggestions-lib",
+    "build": "ng build",
     "build:lib": "ng build input-with-suggestions-lib --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -36,13 +36,13 @@
     "tslib": "^1.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.10",
+    "@angular-devkit/build-angular": "^14.0.0",
     "@angular-devkit/build-ng-packagr": "^0.13.10",
     "@angular/animations": "~7.2.0",
-    "@angular/cli": "~7.3.9",
+    "@angular/cli": "^14.0.0",
     "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/language-service": "~7.2.0",
@@ -61,13 +61,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.7.1",
+    "ng-packagr": "^14.0.0",
     "protractor": "~5.4.0",
     "rxjs": "~6.3.3",
     "ts-node": "~7.0.0",
     "tsickle": "^0.34.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
+    "typescript": "~4.6.2",
     "zone.js": "~0.8.26"
   }
 }
