--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,11 +29,16 @@ jobs:
           git config --global user.email "mcodesido@baufest.com"
           git config --global user.name "Mateo Codesido"
           
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli@15.2.0
+      - name: Clean install directory
+        run: rm -rf node_modules package-lock.json
         
-      - name: Install Dependencies
-        run: npm ci
+      - name: Update package.json to latest Angular
+        run: |
+          npm install --no-save @angular/cli@latest
+          ng update @angular/core @angular/cli --force
+          
+      - name: Install dependencies
+        run: npm install
 
       - name: Build
         run: npm run build
