--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,11 +19,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      
+      - name: Setup Node.js 14
+        uses: actions/setup-node@v3
         with:
-          node-version: 14.20.1
-          registry-url: https://registry.npmjs.org/
+          node-version: '14.20.1'  
           
+      - name: Update package.json for compatible Angular version
+        run: |
+          npm pkg set devDependencies.@angular/cli="14.2.0"
+          npm pkg set devDependencies.@angular/compiler="14.2.0"
+          npm pkg set devDependencies.@angular/compiler-cli="14.2.0"
+          npm pkg set devDependencies.@angular/core="14.2.0"
+          npm pkg set devDependencies.@angular/common="14.2.0"
+          npm pkg set devDependencies.@angular-devkit/build-angular="14.2.0"
+          npm pkg set devDependencies.ng-packagr="14.2.0"
+          npm pkg set devDependencies.typescript="~4.6.4"
+          npm pkg set peerDependencies.@angular/core="^14.0.0"
+          npm pkg set peerDependencies.@angular/common="^14.0.0"
+          npm pkg set peerDependencies.@angular/forms="^14.0.0"
+      
+      - name: Generate new package-lock.json
+        run: npm install --package-lock-only
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Install Angular CLI globally and build
+        run: |
+          npm install -g @angular/cli@14.2.0
+          npx ng build input-with-suggestions-lib
+
       - name: Set Global Git Config
         run: |
           git config --global user.email "mcodesido@baufest.com"
@@ -32,14 +58,6 @@ jobs:
       - name: Clean install directory
         run: rm -rf node_modules package-lock.json
         
-      - name: Update package.json to latest Angular
-        run: |
-          npm install --no-save @angular/cli@latest
-          ng update @angular/core @angular/cli --force
-          
-      - name: Install dependencies
-        run: npm install
-
       - name: Build
         run: npm run build
 
