--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16.20.0'  # Using Node.js 16.x which is compatible with your dependencies
+          node-version: '20.11.1'  # Updated to a compatible Node.js version
           registry-url: 'https://registry.npmjs.org/'
           
       - name: Update package.json for compatible Angular version
@@ -32,8 +32,24 @@ jobs:
             const fs = require("fs");
             const pkg = JSON.parse(fs.readFileSync("package.json", "utf8"));
             
-            // Keep Angular versions consistent with what's in package.json (Angular 7)
-            // Do not upgrade to Angular 14 which creates dependency conflicts
+            // Update all devDependencies to use Angular 14
+            pkg.devDependencies["@angular/cli"] = "14.2.0";
+            pkg.devDependencies["@angular/compiler"] = "14.2.0";
+            pkg.devDependencies["@angular/compiler-cli"] = "14.2.0";
+            pkg.devDependencies["@angular/core"] = "14.2.0";
+            pkg.devDependencies["@angular/common"] = "14.2.0";
+            pkg.devDependencies["@angular/platform-browser"] = "14.2.0";
+            pkg.devDependencies["@angular/platform-browser-dynamic"] = "14.2.0";
+            pkg.devDependencies["@angular/router"] = "14.2.0";
+            pkg.devDependencies["@angular/forms"] = "14.2.0";
+            pkg.devDependencies["@angular-devkit/build-angular"] = "14.2.0";
+            pkg.devDependencies["ng-packagr"] = "14.2.0"; // Pin to version 14.2.0
+            pkg.devDependencies["typescript"] = "~4.6.4";
+            
+            // Update peerDependencies
+            pkg.peerDependencies["@angular/core"] = "^14.0.0";
+            pkg.peerDependencies["@angular/common"] = "^14.0.0";
+            pkg.peerDependencies["@angular/forms"] = "^14.0.0";
             
             fs.writeFileSync("package.json", JSON.stringify(pkg, null, 2));
           '
@@ -149,6 +165,68 @@ jobs:
         
       - name: Build library directly
         run: |
+          # Create necessary tsconfig files if they don't exist
+          if [ ! -f "tsconfig.json" ]; then
+            echo '{
+              "compileOnSave": false,
+              "compilerOptions": {
+                "baseUrl": "./",
+                "outDir": "./dist/out-tsc",
+                "sourceMap": true,
+                "declaration": false,
+                "downlevelIteration": true,
+                "experimentalDecorators": true,
+                "module": "es2020",
+                "moduleResolution": "node",
+                "importHelpers": true,
+                "target": "es2015",
+                "typeRoots": [
+                  "node_modules/@types"
+                ],
+                "lib": [
+                  "es2018",
+                  "dom"
+                ],
+                "skipLibCheck": true
+              },
+              "angularCompilerOptions": {
+                "enableI18nLegacyMessageIdFormat": false,
+                "strictInjectionParameters": true,
+                "strictInputAccessModifiers": true,
+                "strictTemplates": true
+              }
+            }' > tsconfig.json
+          fi
+
+          if [ ! -f "tsconfig.lib.json" ]; then
+            echo '{
+              "extends": "./tsconfig.json",
+              "compilerOptions": {
+                "outDir": "./out-tsc/lib",
+                "declaration": true,
+                "declarationMap": true,
+                "inlineSources": true,
+                "types": []
+              },
+              "exclude": [
+                "src/test.ts",
+                "**/*.spec.ts"
+              ]
+            }' > tsconfig.lib.json
+          fi
+
+          if [ ! -f "tsconfig.lib.prod.json" ]; then
+            echo '{
+              "extends": "./tsconfig.lib.json",
+              "compilerOptions": {
+                "declarationMap": false
+              },
+              "angularCompilerOptions": {
+                "compilationMode": "partial"
+              }
+            }' > tsconfig.lib.prod.json
+          fi
+
           # Examine file structure
           echo "Current directory structure:"
           ls -la
@@ -157,23 +235,64 @@ jobs:
           if [ -f "ng-package.json" ]; then
             echo "Contents of ng-package.json:"
             cat ng-package.json
+          else
+            echo "ng-package.json not found in current directory"
+            # Create a default ng-package.json if missing
+            echo '{
+              "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
+              "dest": "dist",
+              "lib": {
+                "entryFile": "public-api.ts"
+              }
+            }' > ng-package.json
+            echo "Created default ng-package.json"
           fi
           
-          # Install just the packages needed for the build, not the entire dependency tree
-          npm install --no-save --legacy-peer-deps ng-packagr@4.7.1 @angular-devkit/build-ng-packagr@0.13.10 typescript@~3.2.2
+          # Update ng-package.json to use correct paths
+          node -e '
+            const fs = require("fs");
+            const path = require("path");
+            try {
+              const ngPkg = JSON.parse(fs.readFileSync("ng-package.json", "utf8"));
+              
+              // Check current directory structure to find the right entry file
+              let entryFile = "public-api.ts";
+              if (fs.existsSync("lib") && fs.readdirSync("lib").length > 0) {
+                entryFile = "lib/public-api.ts";
+              } else if (fs.existsSync("src") && fs.readdirSync("src").length > 0) {
+                entryFile = "src/public-api.ts";
+              }
+              
+              // Update ng-package.json with correct configuration format
+              const updatedConfig = {
+                "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
+                "dest": "dist"
+              };
+              
+              // Set the correct lib structure
+              updatedConfig.lib = {
+                "entryFile": entryFile
+              };
+              
+              fs.writeFileSync("ng-package.json", JSON.stringify(updatedConfig, null, 2));
+              console.log("Updated ng-package.json with entryFile:", entryFile);
+            } catch (error) {
+              console.error("Error updating ng-package.json:", error);
+            }
+          '
+
+          # Show the updated configuration
+          echo "Updated ng-package.json:"
+          cat ng-package.json
           
-          # Use ng-packagr directly with the existing configuration
-          echo "Building with ng-packagr..."
-          npx ng-packagr -p ng-package.json
-          
+          # Install and use specific ng-packagr version
+          npm install --no-save ng-packagr@14.2.0
+          npx ng-packagr@14.2.0 -p ng-package.json
+
+      - name: Build
+        run: npm run build
+
       - name: Publish Package
-        run: |
-          # Check if the dist directory contains the package files
-          echo "Contents of dist directory:"
-          ls -la dist
-          
-          # Navigate to the dist directory and publish from there
-          cd dist/input-with-suggestions-lib
-          npm publish
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
