--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,6 +29,8 @@ jobs:
           git config --global user.email "mcodesido@baufest.com"
           git config --global user.name "Mateo Codesido"
           
+      - name: Install NPM
+        run: npm install -g npm@10.8.2
 
       - name: Install Dependencies
         run: npm ci --legacy-peer-deps
