--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,9 @@ jobs:
           
 
       - name: Install Dependencies
-        run: npm ci --legacy-peer-deps
+        run: |
+          rm -f package-lock.json
+          npm install
 
       - name: Build
         run: npm run build
