--- a/angular.json
+++ b/angular.json
@@ -4,35 +4,40 @@
   "newProjectRoot": "projects",
   "projects": {
     "input-with-suggestions-lib": {
-      "projectType": "library",
-      "root": ".",
+      "root": "",
       "sourceRoot": "src",
+      "projectType": "library",
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "builder": "@angular-devkit/build-ng-packagr:build",
           "options": {
-            "project": "./ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "./tsconfig.lib.prod.json"
-            },
-            "development": {
-              "tsConfig": "./tsconfig.lib.json"
-            }
-          },
-          "defaultConfiguration": "production"
+            "tsConfig": "tsconfig.lib.json",
+            "project": "ng-package.json"
+          }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "tsConfig": "./tsconfig.spec.json",
-            "karmaConfig": "./karma.conf.js"
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "tsconfig.lib.json",
+              "tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
     }
-  }
+  },
+  "defaultProject": "input-with-suggestions-lib"
 } 
