--- a/package.json
+++ b/package.json
@@ -1,29 +1,15 @@
 {
   "name": "input-with-suggestions-lib",
-  "version": "0.3.6",
-  "description": "A customizable Angular component for text input with dynamic suggestions",
-  "keywords": [
-    "angular",
-    "input",
-    "suggestions",
-    "autocomplete",
-    "component",
-    "ui"
-  ],
-  "author": {
-    "name": "Mateo Codesido",
-    "email": "mscodesido@gmail.com"
-  },
-  "license": "MIT",
+  "version": "0.3.7",
   "scripts": {
     "ng": "ng",
+    "start": "ng serve",
     "build": "ng build",
-    "build:lib": "ng build input-with-suggestions-lib",
-    "npm:pack": "cd dist && npm pack",
-    "publish": "npm run build:lib && cd dist && npm publish",
-    "prepublishOnly": "npm run build:lib"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "private": false,
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/PunteriaCero/input-with-suggestions"
@@ -32,26 +18,43 @@
     "url": "https://github.com/PunteriaCero/input-with-suggestions/issues"
   },
   "homepage": "https://github.com/PunteriaCero/input-with-suggestions",
-  "peerDependencies": {
-    "@angular/common": ">=7.2.0",
-    "@angular/core": ">=7.2.0",
-    "@angular/forms": ">=7.2.0"
-  },
   "dependencies": {
-    "tslib": "^1.9.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "~7.3.0",
+    "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "ng-packagr": "^4.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "tsickle": "~0.34.0",
-    "typescript": "~3.2.4",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.10",
+    "@angular-devkit/build-ng-packagr": "^0.13.10",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.7.1",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "^0.34.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   }
 }
