--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,15 +4,8 @@
 name: Node.js Package
 
 on:
-  workflow_dispatch:
-    inputs:
-      example_input:
-        description: 'An example input'
-        required: false
-        default: 'default_value'
   release:
     types: [created]
-  
 
 jobs:
   publish-npm:
@@ -29,11 +22,11 @@ jobs:
           git config --global user.email "mcodesido@baufest.com"
           git config --global user.name "Mateo Codesido"
           
+      - name: Bump Version
+        run: npm version ${{github.event.release.tag_name}}
 
       - name: Install Dependencies
-        run: |
-          rm -f package-lock.json
-          npm install --force
+        run: npm ci
 
       - name: Build
         run: npm run build
