--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,12 +29,16 @@ jobs:
           git config --global user.email "mcodesido@baufest.com"
           git config --global user.name "Mateo Codesido"
           
-      - name: Install Dependencies
+      - name: Install Dependencies (without node-sass)
         run: |
           if [ ! -f package-lock.json ]; then
-            npm install --legacy-peer-deps
+            npm install --legacy-peer-deps --no-package-lock
+            npm uninstall node-sass --no-package-lock
+            npm install sass --save-dev --legacy-peer-deps --no-package-lock
           else
             npm ci --legacy-peer-deps
+            npm uninstall node-sass --no-package-lock
+            npm install sass --save-dev --legacy-peer-deps --no-package-lock
           fi
 
       - name: Build
